--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-kaustubh.png"
-                            srcset="images/about-kaustubh.png 1x, images/about-kaustubh.png 2x" alt=""
+                        <img src="images/about-kaustubh.jpeg"
+                            srcset="images/about-kaustubh.jpeg 1x, images/about-kaustubh.jpeg 2x" alt=""
                             class="about-info__pic" data-animate-el>
                     </div>
 
