--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <li><a href="https://github.com/kaustubh-trivedi">Github</a></li>
                         <li><a href="https://www.linkedin.com/in/kaustubh-trivedi-kt888">Linkedin</a></li>
                         <li><a href="mailto:kaustubhtrivedi12@gmail.com">Gmail</a></li>
-                        <li><a href="https://www.instagram.com/kaustubh.trivedi/profilecard/?igsh=MW9pY3d4NGp1NDB3OQ==">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/kaustubh.trivedi/">Instagram</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
