--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 responsive interfaces or robust server-side solutions, I thrive on turning ideas into
                                 impactful digital products.
                             </p>
-                            <a href="./Resume/09_24_Kaustubh_Trivedi.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="./Resume/11_24_Kaustubh_Trivedi.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
@@ -314,8 +314,8 @@
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-02">
                                     <div class="folio-list__item-pic">
-                                        <img src="images/portfolio/lamp.jpg"
-                                            srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x"
+                                        <img src="images/portfolio/Flexichain.png"
+                                            srcset="images/portfolio/Flexichain.png 1x, images/portfolio/Flexichain.png 2x"
                                             alt="">
                                     </div>
 
