added alcorn images

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-02">
                                     <div class="folio-list__item-pic">
-                                        <img src="images/portfolio/Flexichain.png"
-                                            srcset="images/portfolio/Flexichain.png 1x, images/portfolio/Flexichain.png 2x"
+                                        <img src="images/portfolio/Alcorn.png"
+                                            srcset="images/portfolio/Alcorn.png 1x, images/portfolio/Alcorn.png 2x"
                                             alt="">
                                     </div>
 
