added alcorn images

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-02">
                                     <div class="folio-list__item-pic">
-                                        <img src="images/portfolio/Alcorn.png"
-                                            srcset="images/portfolio/Alcorn.png 1x, images/portfolio/Alcorn.png 2x"
+                                        <img src="images/portfolio/gallery/Alcorn.png"
+                                            srcset="images/portfolio/gallery/Alcorn.png 1x, images/portfolio/gallery/Alcorn.png 2x"
                                             alt="">
                                     </div>
 
@@ -474,7 +474,7 @@
 
                     <div id="modal-02" hidden>
                         <div class="modal-popup">
-                            <img src="images/portfolio/gallery/g-lamp.jpg" alt="">
+                            <img src="images/portfolio/gallery/Alcorn.png" alt="">
 
                             <div class="modal-popup__desc">
                                 <h5>Alcorn India</h5>
