--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                                 responsive interfaces or robust server-side solutions, I thrive on turning ideas into
                                 impactful digital products.
                             </p>
-                            <a href="./Resume/01_25_Kaustubh_Trivedi.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="./Resume/01_25_Kaustubh_Trivedi.pdf" class="btn btn--medium u-fullwidth"
+                                data-animate-el>Download CV</a>
 
                         </div>
                     </div>
@@ -187,12 +188,30 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
-                                    <h4 class="timeline__title">Alobha Technologies</h3>
+                                    <h4 class="timeline__title">Publicis Sapient</h3>
                                         <h5 class="timeline__meta">Full Stack Developer</h5>
-                                        <p class="timeline__timeframe">Jan 2023 - Present</p>
+                                        <p class="timeline__timeframe">Sept 2025 - Now</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>At Alobha Technologies Pvt. Ltd., I developed dynamic websites using React for the front end and Node.js with Express and Sequelize for the back end. Successfully built CRMs and administrative panels in React.js while creating and integrating APIs in Node.js, delivering scalable and efficient solutions tailored to business needs.</p>
+                                    <p>At Publicis Sapient, I develope frontend and backend along with the pipeline
+                                        management of various e- commerce projects.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
+                                    <h4 class="timeline__title">Alobha Technologies</h3>
+                                        <h5 class="timeline__meta">Full Stack Developer</h5>
+                                        <p class="timeline__timeframe">Jan 2023 - Sept 2025</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>At Alobha Technologies Pvt. Ltd., I developed dynamic websites using React for
+                                        the front end and Node.js with Express and Sequelize for the back end.
+                                        Successfully built CRMs, LMS, HRMS, Job portals, Dynamic Websites and
+                                        administrative panels in React.js while creating and integrating APIs in
+                                        Node.js, delivering scalable and efficient solutions tailored to business needs.
+                                    </p>
                                 </div>
                             </div>
 
@@ -204,7 +223,10 @@
                                     <p class="timeline__timeframe">Apr 2022 - Jan 2023</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Gained hands-on experience at VDAI Biosec Pvt. Ltd., developing websites using WordPress and PHP. Contributed to module-wise integrations on panels within the CodeIgniter framework and collaborated with senior developers on web projects, enhancing technical and teamwork skills.</p>
+                                    <p>Gained hands-on experience at VDAI Biosec Pvt. Ltd., developing websites using
+                                        WordPress and PHP. Contributed to module-wise integrations on panels within the
+                                        CodeIgniter framework and collaborated with senior developers on web projects,
+                                        enhancing technical and teamwork skills.</p>
                                 </div>
                             </div>
 
@@ -228,7 +250,9 @@
                                         <p class="timeline__timeframe">2019 - 2015</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Completed B.Tech in Mechanical Engineering from Government Engineering College, Bharatpur, equipping with strong technical knowledge and practical skills for industry challenges.</p>
+                                    <p>Completed B.Tech in Mechanical Engineering from Government Engineering College,
+                                        Bharatpur, equipping with strong technical knowledge and practical skills for
+                                        industry challenges.</p>
                                 </div>
                             </div>
 
@@ -284,6 +308,32 @@
 
                         <ul class="folio-list row block-lg-one-half block-stack-on-1000">
 
+                            <li class="folio-list__item column" data-animate-el>
+                                <a class="folio-list__item-link" href="#modal-07">
+                                    <div class="folio-list__item-pic">
+                                        <img src="images/portfolio/gallery/IndiaIearnx.png"
+                                            srcset="images/portfolio/gallery/IndiaIearnx.png 1x, images/portfolio/gallery/IndiaIearnx.png 2x"
+                                            alt="">
+                                    </div>
+
+                                    <div class="folio-list__item-text">
+                                        <div class="folio-list__item-cat">
+                                            LMS Software
+                                        </div>
+                                        <div class="folio-list__item-title">
+                                            IndiaLearnX
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="folio-list__proj-link" href="#" title="project link">
+                                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                                            fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+                                    </svg>
+                                </a>
+                            </li> <!--end folio-list__item -->
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-01">
                                     <div class="folio-list__item-pic">
@@ -453,6 +503,26 @@
 
                     <!-- Modal Templates Popup
                     -------------------------------------------- -->
+                    <div id="modal-07" hidden>
+                        <div class="modal-popup">
+                            <img src="images/portfolio/gallery/IndiaIearnx.png" alt="">
+                            <div class="modal-popup__desc">
+                                <h5>IndiaLearnx</h5>
+                                <p>
+                                    An LMS platform focused on delivering technology-driven education using H5P
+                                    services. Indialearnx stands out as one of the best platforms where students gain
+                                    knowledge through real-world scenarios, interactive videos, and quizzes immediately
+                                    after each topic. The platform also calculates attention and engagement levels for
+                                    every topic and provides parental access to monitor a child’s learning journey.
+                                </p>
+                                <ul class="modal-popup__cat">
+                                    <li>LMS Software</li>
+                                </ul>
+                            </div>
+
+                            <a href="https://indialearnx.com" class="modal-popup__details">Project link</a>
+                        </div>
+                    </div> <!-- end modal -->
                     <div id="modal-01" hidden>
                         <div class="modal-popup">
                             <img src="images/portfolio/gallery/Flexichain.png" alt="">
@@ -546,7 +616,8 @@
                                 </ul>
                             </div>
 
-                            <a href="https://vdsai.com/siddharthnagartourism/siddharthnagartourism/en.php" class="modal-popup__details">Project link</a>
+                            <a href="https://vdsai.com/siddharthnagartourism/siddharthnagartourism/en.php"
+                                class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
 
@@ -555,7 +626,11 @@
                             <img src="images/portfolio/gallery/Sohagibarwa.png" alt="">
                             <div class="modal-popup__desc">
                                 <h5>Sohagi Barwa Sanctuary</h5>
-                                <p>The Sohagi Barwa Wildlife Sanctuary website, developed in PHP, is a dedicated platform to promote eco-tourism and the rich biodiversity of the sanctuary. It provides visitors with detailed information about the sanctuary's flora, fauna, and natural landscapes, along with guides for planning treks, safaris, and nature exploration, fostering a deeper connection with wildlife and conservation.</p>
+                                <p>The Sohagi Barwa Wildlife Sanctuary website, developed in PHP, is a dedicated
+                                    platform to promote eco-tourism and the rich biodiversity of the sanctuary. It
+                                    provides visitors with detailed information about the sanctuary's flora, fauna, and
+                                    natural landscapes, along with guides for planning treks, safaris, and nature
+                                    exploration, fostering a deeper connection with wildlife and conservation.</p>
                                 <ul class="modal-popup__cat">
                                     <li>Website</li>
                                 </ul>
@@ -568,7 +643,7 @@
                 </div> <!-- end works-portfolio -->
 
 
-                
+
             </section> <!-- end s-works -->
 
 
